Pull up following revision(s) (requested by gson in ticket #1120): 	lib/libm/src/e_hypotf.c: revision 1.10 Fix incorrect magic numbers in scaling.  From FreeBSD commit 23397, by way of Rin Okuyama.  Fixes PR lib/50698.